# nikita

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  MAGIC_LINK_FIX.md  NIKITA_SYSTEM_OVERVIEW.md  PROJECT_INDEX.json  README.md  ROADMAP.md  alembic.ini  cleanup-canonical-decisions.txt  event-stream.md  generate-claude-md.skill  project-intel.mjs  pyproject.toml  workbook.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-analyzer.md  executor-implement-verify.md  implementation-planner.md  sdd-api-validator.md  sdd-architecture-validator.md  sdd-auth-validator.md  sdd-data-layer-validator.md  sdd-frontend-validator.md  sdd-testing-validator.md  tree-of-thought-agent.md  workflow-orchestrator.md
.claude/commands/: analyze.md  api-summary.md  arch-brainstorm.md  audit.md  bootstrap.md  bug.md  constitution.md  deep-audit.md  define-product.md  e2e-test.md  e2e.md  feature.md  gemini.md  generate-constitution.md  implement.md  index.md  plan.md  prime.md  prompt.md  roadmap.md  security-audit.md  sentiment.md  system-integrity.md  tasks.md  team-agent.md  verify.md  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: CLAUDE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.sdd/: active-feature.md  audit-trail.md  next-steps.md  sdd-state.md
.vercel/: project.json
audits/: INDEX.md  vercel-project-config.md
docs/: CONCEPTS.md  INDEX.md  README.md  deployment.md  game-design-documentation.md  how-nikita-works.md  nikita-technical-brief.md  portal-testing-report.md  system-intelligence-roadmap.md
docs-to-process/: 20251129-verification-002-phase1-2.md  20251129-verification-002-phase3.md  20251130-verification-002-phase4.md  20251130-verification-002-phase5.md  20251130-verification-002-phase6.md  20251201-report-game-mechanics-audit.md  20251202-research-atuc.md  20251202-security-review-001.md  20251202-system-audio-guide.md  20251203-analysis-memori-comparison.md  20251203-meta-prompt-architecture-investigation.md  20251213-e2e-test-report-final.md  20251213-e2e-test-report.md  20251217-e2e-journey-report.md  20251217-e2e-test-report-final.md  20251219-nikita-otp-bug-fix-summary-b4e2.md  20251219-otp-quick-reference-c1a9.md  20251219-supabase-otp-research-a2f7.md  20251222-e2e-test-report-spec017.md  20251224-research-post-compaction-prompts-a7f3.md  20251224-security-neo4j-rotation.md  20251227-bug-fixes-deployment-complete.md  20251227-e2e-clean-slate-critical-findings.md  20251227-e2e-test-spec017-analysis.md  20251227-e2e-test-spec017-final-report.md  20251228-bug005-regression-fix.md  20251228-e2e-bug008-verification.md  20251228-e2e-firecrawl-verification.md  20251228-research-narrative-prompts-e8f2.md  20251229-research-elevenlabs-voice-integration-8f2a.md  20260114-meta-nikita-optimization-spec.md  20260207-post-sprint-verification.md  20260207-product-brief-portal-redesign.md  20260209-analysis-prod-hardening.md  20260210-comprehensive-e2e-report.md  20260210-live-e2e-verification.md  20260210-pipeline-callers-fix-proof.md  20260210-pipeline-fix-proof-report.md  20260210-pipeline-proof-report.md  20260210-research-pydantic-ai-migration.md  (+52 more)
memory/: CHANGELOG.md  README.md  architecture.md  backend.md  constitution.md  game-mechanics.md  integrations.md  memory-system-architecture.md  product.md  user-journeys.md
nikita/: CLAUDE.md  __init__.py
plan/: master-plan.md
plans/: 017-enhanced-onboarding-discovery.md  e2e-fix-plan-2025-12-17.md  master-plan.md  spec-210-session-resume.md
portal/: .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  PLAYWRIGHT_RESULTS.md  README.md  TESTING.md  VERCEL_SETUP.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.build.json  vercel.json  vitest.config.ts  vitest.setup.ts
scripts/: check_heartbeat_cron_jobs.py  ci-check.sh  configure_meta_nikita_tools.py  configure_nikita_tools.py  configure_voice_v3.py  converse_source_rate_measurement.py  export-diagrams.sh  handoff_stranded_migration.py  migrate_neo4j_to_supabase.py  persona_baseline_generate.py  smoke-test.sh  test-voice-api.sh  test-voice-quick.sh  verify-voice-call.py
specs/: CROSS_VALIDATION_REPORT.md  INDEX.md  README.md  SPEC_INVENTORY.md  humanization-cross-spec-audit.md
supabase/: config.toml
tests/: __init__.py  conftest.py  test_combined_flags_adversarial.py
todo/: master-todo.md
todos/: master-todo.md
(+2642 files in other folders)
