[project]
name = "nikita"
version = "0.1.0"
description = "Nikita: Don't Get Dumped - AI Girlfriend Game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",

    # AI/LLM
    "pydantic-ai>=0.0.36",
    "pydantic-settings>=2.0.0",  # Settings management
    "anthropic>=0.40.0",
    "openai>=1.55.0",  # For embeddings
    "tiktoken>=0.8.0",  # Token counting for Claude

    # Voice
    "elevenlabs>=1.15.0",

    # NOTE: graphiti-core removed (Spec 042 T5.2)
    # Memory now uses SupabaseMemory with pgVector

    # Database
    "supabase>=2.10.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",

    # Telegram
    "aiogram>=3.15.0",

    # Background Tasks (pg_cron via Supabase - no Python deps needed)

    # JWT Authentication
    "PyJWT>=2.8.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",  # For YAML config loading
    "jinja2>=3.1.0",  # Prompt template rendering (Spec 042)
    "structlog>=24.4.0",  # Structured logging for pipeline
    "opentelemetry-api>=1.29.0",  # Distributed tracing
    "opentelemetry-sdk>=1.29.0",  # Tracing SDK

    # Web Search (017-enhanced-onboarding venue research)
    "firecrawl-py>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nikita"]

[tool.hatch.build.targets.wheel.force-include]
"nikita/config_data" = "nikita/config_data"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
env_files = [".env"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "smoke: marks tests as smoke tests for post-deployment verification",
]
